Update BBS with new event service
Signed-off-by: David Lilienfeld <davidlilienfeld4@gmail.com>

--- a/plugins/events-backend-module-bitbucket-server/package.json
+++ b/plugins/events-backend-module-bitbucket-server/package.json
@@ -41,8 +41,7 @@
   },
   "dependencies": {
     "@backstage/backend-plugin-api": "workspace:^",
-    "@backstage/plugin-events-node": "workspace:^",
-    "winston": "^3.2.1"
+    "@backstage/plugin-events-node": "workspace:^"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
