--- a/plugins/catalog-backend/package.json
+++ b/plugins/catalog-backend/package.json
@@ -44,7 +44,7 @@
     "build": "backstage-cli package build",
     "clean": "backstage-cli package clean",
     "fuzz": "backstage-repo-tools package schema openapi fuzz --exclude-checks response_schema_conformance",
-    "generate": "backstage-repo-tools package schema openapi generate --server --client-package packages/catalog-client",
+    "generate": "backstage-repo-tools package schema openapi generate --server --client-package packages/catalog-client --server-client-import \"@backstage/catalog-client/alpha\"",
     "lint": "backstage-cli package lint",
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
